css/style.css
/* common css starts here  */
@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Quicksand:wght@300..700&display=swap");
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
body {
  background-color: var(--bg_color);
  .container {
    padding-left: 0;
    padding-right: 0;
  }
  .row {
    margin: 0;
    padding: 0;
    --bs-gutter-x: 0;
    --bs-gutter-y: 0;
  }
}
a {
  color: var(--link_color);
  text-decoration: none;
}
ul,
li {
  list-style-type: none;
  margin: 0;
  padding: 0;
}
:root {
  --bg_color: #000000;
  --hero_color: #87c232;
  --text_color: #ffffff;
  --link_color: #0000ff;
  --white_10prcnt: rgba(255, 255, 255, 0.1);
  --heading_font: "Montserrat", sans-serif;
  --info_font: "Quicksand", sans-serif;
}
.l_btn {
  border: 1px solid var(--hero_color);
  text-transform: uppercase;
  font-size: 16px;
  font-weight: 700;
  font-family: var(--info_font);
  width: 200px;
  height: 55px;
  border-radius: 28px;
  cursor: pointer;
  background-color: var(--hero_color);
  transition: 0.5s;
  &:hover {
    background-color: transparent;
    color: var(--text_color);
  }
}
/* common css ends here  */

/* header section css starts here  */
#header {
  padding: 30px 0 60px;

  .left {
    .header_logo {
      width: 200px;
    }
  }
  .middle {
    background-color: var(--white_10prcnt);
    border-radius: 33px;
    padding: 20px 40px;
    .menu {
      display: flex;
      justify-content: space-between;
      li {
        color: var(--text_color);
        text-transform: capitalize;
        font-family: var(--info);
        font-weight: 600;
        font-size: 16px;
        transition: 0.5s;
        &:hover {
          color: var(--hero_color);
          cursor: pointer;
        }
      }
    }
  }
  .right {
    text-align: end;
  }
}
/* header section css ends here  */

/* banner section css starts here*/
#banner {
  margin-bottom: 150px;
  .left {
    .title {
      font-size: 16px;
      color: var(--text_color);
      font-family: var(--info_font);
      text-transform: capitalize;
      font-weight: 500;
    }
    .heading {
      color: var(--text_color);
      font-size: 68px;
      font-family: var(--heading_font);
      font-weight: 600;
      line-height: 86px;
      text-align: justify;
      span {
        color: var(--hero_color);
        display: block;
      }
    }
    .details {
      font-size: 18px;
      color: var(--text_color);
      font-family: var(--heading_font);
      text-transform: capitalize;
      font-weight: 400;
      text-align: justify;
      line-height: 28px;
      margin-bottom: 40px;
    }
  }
  .right {
    text-align: end;
    .banner_img {
      height: 767px;
      width: 627px;
      border-right: 2px solid var(--hero_color);
      border-bottom: 2px solid var(--hero_color);
    }
  }
}
/* banner section css ends here*/

/* expertise section css starts here  */
#expertise {
  .top {
    justify-content: space-between;
    border-top: 5px solid var(--hero_color);
    border-radius: 30px;
    padding: 20px;
    margin-bottom: 50px;
    .child {
      font-family: var(--info_font);
      &:first-letter {
        text-transform: uppercase;
      }
      &:nth-child(1) {
        order: 1;
        color: var(--hero_color);
        text-transform: capitalize;
        font-size: 20px;
        font-weight: 600;
      }
      &:nth-child(2) {
        order: 3;
        font-size: 33px;
        font-weight: 800;
        color: var(--text_color);
        text-transform: capitalize;
        span {
          color: var(--hero_color);
        }
      }
      &:nth-child(3) {
        order: 2;
        font-size: 18px;
        font-weight: 400;
        line-height: 26px;
        color: var(--text_color);
      }
      &:nth-child(4) {
        order: 4;
      }
    }
  }
}
/* expertise section css ends here  */

